--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tmp/themes/introduction"]
 	path = tmp/themes/introduction
 	url = https://github.com/victoriadotdev/hugo-theme-introduction.git
+[submodule "themes/themes/hugo-theme-bootstrap4-blog"]
+	path = themes/themes/hugo-theme-bootstrap4-blog
+	url = https://github.com/icsnju/2018yfb1004800.cn
