--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://2018yfb1004800.cn/"
-languageCode = "en-us"
+languageCode = "zh-cn"
 title = "国家重点研发计划《人机物融合的云计算架构与平台》"
 theme = "hugo-theme-bootstrap4-blog"
 
@@ -12,13 +12,6 @@ theme = "hugo-theme-bootstrap4-blog"
   name = "北京大学软件工程研究所"
   url = "http://www.sei.pku.edu.cn/"
 
-#[[menu.sidebar]]
-#  name = "Link 2"
-#  url = "https://example.org"
-
-#[[menu.navbar]]
-#  name = "Link 1"
-#  url = "https://example.org"
 
 
 # Theme variables
