--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
   - git checkout --orphan gh-pages
   - git reset --hard
   - git commit --allow-empty -m "Initializing gh-pages branch"
-  - git push upstream gh-pages
+  - git push origin gh-pages
   - git checkout master
 
 script:
