--- a/.travis.yml
+++ b/.travis.yml
@@ -8,25 +8,21 @@ git:
 install: 
   - go get github.com/gohugoio/hugo
 
-before_script:
+script:
   - git submodule init
   - git submodule update
-  - git checkout --orphan gh-pages
-  - git reset --hard
-  - git commit --allow-empty -m "Initializing gh-pages branch"
-  - git push origin gh-pages
-  - git checkout master
-
-script:
   - rm -rf public
+  - mkdir public
+  - git worktree prune
+  - rm -rf .git/worktrees/public/
   - git worktree add -B gh-pages public origin/gh-pages
+  - rm -rf public/*
   - hugo
-  - cd public
+  - cd public/
   - cp ../CNAME .
   - git add --all
-  - git commit -m "Publishing to gh-pages" 
-  - cd ..
-  - git push origin gh-pages
+  - git commit -m "add message"
+  - git push origin gh-pages:gh-pages
 
   # Deploy to GitHub pages
 deploy:
