--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
 script:
   - git submodule init
   - git submodule update
+  - git branch
   - rm -rf public
   - mkdir public
   - git worktree prune
