--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ script:
   - git worktree prune
   - rm -rf .git/worktrees/public/
   - git branch gh-pages
-  - git worktree add -B gh-pages public ../gh-pages
+  - git remote
+  - git worktree add -B gh-pages public upstream/gh-pages
   - rm -rf public/*
   - hugo
   - cd public/
