--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://2018yfb1004800.cn/"
 languageCode = "zh-cn"
-title = "国家重点研发计划《人机物融合的云计算架构与平台》"
+title = "人机物融合的云计算架构与平台"
 theme = "hugo-theme-bootstrap4-blog"
 
 
@@ -21,7 +21,7 @@ theme = "hugo-theme-bootstrap4-blog"
   author = "Your Name"
 
   # Description/subtitle for homepage (can be Markdown)
-  description = "国家重点研发计划《人机物融合的云计算架构与平台》官方信息发布平台"
+  description = "国家重点研发计划《人机物融合的云计算架构与平台》信息发布平台"
 
   # Show header (default: true)
   #header_visible = true
@@ -57,7 +57,7 @@ theme = "hugo-theme-bootstrap4-blog"
 
   [params.sidebar]
     # Optional about block for sidebar (can be Markdown)
-    about = "[北京大学软件工程研究所](http://www.sei.pku.edu.cn/)国家重点研发计划《人机物融合的云计算架构与平台》信息发布平台."
+    about = "国家重点研发计划《人机物融合的云计算架构与平台》信息发布平台."
 
     # How many posts to show on the sidebar (Default: 5)
     #num_recent_posts = 2
