--- a/themes/hugo-theme-bootstrap4-blog/exampleSite/config.toml
+++ b/themes/hugo-theme-bootstrap4-blog/exampleSite/config.toml
@@ -41,7 +41,8 @@ paginate = 5
   #header_visible = true
 
   # Format dates with Go's time formatting
-  date_format = "Mon Jan 02, 2006"
+  date_format = "1.2.2006"
+  #date_format = "Mon Jan 02, 2006"
 
   # verification string for Google Webmaster Tools
   #google_verify_meta = "BAi57DROASu4b2mkVNA_EyUsobfA7Mq8BmSg7Rn-Zp9"
